--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <div class="container">
         <div class="inpt">
             <h2>Add your Salary</h2>
-            <input type="number" name="" id="salary">
+            <input class="sameInput" type="number" name="" id="salary" placeholder="Add your Salary">
             <button id="btnn">Add</button>
-            <div class="salary">Salary: <span id="span-salary">0</span></div>
+            <div class="salary">Salary: <span id="span-salary">0.00</span></div>
             <h2>Article</h2>
-            <input id="id-article" type="text">
+            <input class="sameInputClzsse" id="id-article" type="text" placeholder="Article Name">
             <h2>price</span></h2>
-            <input id="id-price" type="text">
+            <input class="sameInputClzsse" id="id-price" type="text" placeholder="Article Price">
             <button id="btn">ok</button>
 
         </div>
         <div class="screen">
             <h2>Products</h2>
             <div id="storage" class="storage"></div>
-            <div class="cumul">Total: <span id="cumul"> 0.00</span> </div>
+            <div class="cumul">Total:<span id="cumul"> 0.00</span></div>
         </div>
     </div>
     <script src="main.js"></script>
